fix(footer): revert to selectbox language picker on mobile

--- a/packages/web-components/src/components/footer/footer.scss
+++ b/packages/web-components/src/components/footer/footer.scss
@@ -100,31 +100,6 @@
   }
 }
 
-:host(#{$dds-prefix}-footer[size='short']) {
-  padding-bottom: $carbon--spacing-07;
-  ::slotted(#{$dds-prefix}-language-selector-desktop) {
-    @include carbon--breakpoint('lg') {
-      @include carbon--make-col(4, 16);
-      @include carbon--make-col-offset(10, 16);
-    }
-  }
-
-  ::slotted(#{$dds-prefix}-language-selector-mobile) {
-    display: block;
-    margin-top: $spacing-09;
-
-    @include carbon--breakpoint('md') {
-      margin-top: 0;
-      @include carbon--make-col(4, 8);
-      @include carbon--make-col-offset(2, 8);
-    }
-
-    @include carbon--breakpoint('lg') {
-      display: none;
-    }
-  }
-}
-
 // The style of legal nav deviates from the one of React, so we can make the markup simpler.
 // FIXME: Once the style is stabilized, change the markup of React, too, so we can share the style
 :host(#{$dds-prefix}-legal-nav):not([size='micro']) {
@@ -269,7 +244,8 @@
   }
 }
 
-:host(#{$dds-prefix}-language-selector-desktop) {
+:host(#{$dds-prefix}-language-selector-desktop),
+:host(#{$dds-prefix}-language-selector-mobile) {
   position: relative;
   outline: none;
   margin-top: $spacing-09;
@@ -310,6 +286,12 @@
 
     order: 1;
     min-width: carbon--mini-units(27);
+  }
+}
+
+:host(#{$dds-prefix}-language-selector-desktop) {
+  @include carbon--breakpoint-down('lg') {
+    display: none;
   }
 }
 
@@ -364,5 +346,40 @@
   @include carbon--breakpoint('md') {
     max-width: 50%;
     border-left: 1px solid $ui-03;
+  }
+}
+
+:host(#{$dds-prefix}-language-selector-mobile[size='micro']) {
+  align-self: flex-end;
+  border-left: 1px solid $ui-03;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+
+  .#{$prefix}--select-input {
+    height: 100%;
+    background-color: $ui-background;
+    border-bottom: none;
+    width: 100%;
+    max-width: 100%;
+
+    &:hover {
+      background-color: $hover-ui;
+    }
+  }
+
+  @include carbon--breakpoint('md') {
+    max-width: 50%;
+  }
+}
+
+:host(#{$dds-prefix}-language-selector-mobile) {
+  .#{$prefix}--select-input__wrapper {
+    height: $carbon--spacing-09;
+    margin-top: -#{$carbon--spacing-05};
+  }
+
+  @include carbon--breakpoint('lg') {
+    display: none;
   }
 }
